--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
 
     <dimen name="session_root_padding">16dp</dimen>
     <dimen name="session_vertical_margin">8dp</dimen>
+    <dimen name="main_margin">8dp</dimen>
+    <dimen name="btn_margin">2dp</dimen>
 </resources>
